Modernise to Java 25, standalone POM and lz4-java xxHash32
See See https://lz4.github.io/lz4-java/1.3.0/xxhash-benchmark for
choice of xxHash32 via JNI over alternatives.